<resources>
    <string name="app_name">education</string>
    <string name="main_btn">Click me</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="C">C</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="input">|</string>
    <string name="temp">|</string>
</resources>